Activate DCP v2 integration twin adapter
